--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <img src="pokemon_190807_05.png" border="0" width="200" height="200" alt="15">
     <img src="pokemon_190807_05_02.jpg" border="0" width="700" height="400" alt="x">
     <h5>技：ブロッキング　挑発して相手を誘い出し、ブロッキングで迎え撃つ。この技で起点を作り、反撃をする戦法を得意とする。</h5>
-    <h5>悪タイプが追加されたためふいうちを習得する可能性がある。他の地方のマッスグマはレベル技ではらだいこ、卵技で神速を覚</h5>
-    <h5>えるため、それらとの両立が期待される。</h5>
+    <h5>悪タイプが追加されたためふいうちを習得する可能性がある。他の地方のマッスグマはレベル技ではらだいこ、卵技で神速を覚えるため、それらとの両立が期待される。</h5>
     <h2>▼ガラルの姿のポケモン</h2>
     <h4>マタドガス</h4>
     <img src="pokemon_190807_02@2x.png" border="0" width="200" height="200" alt="16">
