--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
     <img src="character_190807_03.png" border="0" alt="0">
     <p>主人公たちの邪魔をする厄介者の集団。マリィをチャンピオンにするために活動している。ほかのチャレンジャーたちに妨害工作を行ってくる。</p>
     <p>ホテルを占拠したり、交通手段を奪ったり、バトル中に野次を飛ばしてくる。マリィがバトルをするときは応援に駆け付ける。</p>
-    <h4>後に以上の内容を詳しく解説したリンクを載せます</h4>
+    <h4>記事を作成し次第以上の内容を詳しく解説したものを載せます</h4>
   </body>
 </html>
