--- a/index.html
+++ b/index.html
@@ -94,5 +94,7 @@
     <p>主人公たちの邪魔をする厄介者の集団。マリィをチャンピオンにするために活動している。ほかのチャレンジャーたちに妨害工作を行ってくる。</p>
     <p>ホテルを占拠したり、交通手段を奪ったり、バトル中に野次を飛ばしてくる。マリィがバトルをするときは応援に駆け付ける。</p>
     <h4>記事を作成し次第以上の内容を詳しく解説したものを載せます</h4>
+    <h1>リンク</h1>
+    <a href="https://gimpoke.github.io/">＜トップページ＞</a>
   </body>
 </html>
